--- a/.gitignore
+++ b/.gitignore
@@ -126,5 +126,5 @@ nb-configuration.xml
 /.phpunit.*.cache
 
 #setting 
-/app/Configs/App.php
-/app/Configs/Database.php
+app/Configs/App.php
+app/Configs/Database.php
