.gitignore htacces and index public

--- a/.gitignore
+++ b/.gitignore
@@ -121,9 +121,12 @@ nb-configuration.xml
 # Visual Studio Code
 .vscode/
 
+
 /results/
 /phpunit*.xml
 /.phpunit.*.cache
 
 #setting 
 app/Config/
+public/index.php
+.htaccess
